# BJTU_OS_Projects

./: .gitignore  .gitmodules  Cargo.toml  README.md  log4rs_ipc_practice.yaml  log4rs_lsh.yaml  log4rs_mtp.yaml
cont_memory_allocation/: CMakeLists.txt  README.md  main.cpp
cont_memory_allocation/data/: data.in
cont_memory_allocation/src/: main.cpp
demo/: .gitignore  array.txt  sudoku.txt  test.txt
ipc_practice/: Cargo.toml
ipc_practice/docs/: design_intro.md  usage.md
ipc_practice/src/: connect_duplex_pipe.rs  connect_with_pipe.rs  connect_with_shmem.rs  connect_with_socket.rs  main.rs
lee_shell/: Cargo.toml  README.md
lee_shell/docs/: Demo.md  Design_Doc.md  How to implement And Or Pipe.md  Lee_Shell_Grammer.md  Little_Details.md  Some_Information_of_Linux_Shell.md  What_We_Have.md  lsh.puml
lee_shell/src/: command.rs  common.rs  config.rs  default_env_vars.rs  history.rs  kernel.rs  lsh.pest  lsh_parser.rs  main.rs  runner.rs  ui.rs
multi_thread_addon/: CMakeLists.txt  design.md  make_chaos_main.c  mutex_sol.c  peterson_sol.c
multi_thread_programming/: Cargo.toml
multi_thread_programming/docs/: Design.md
multi_thread_programming/src/: main.rs
vm_manager/: .gitignore  .gitmodule  CMakeLists.txt  README.md
vm_manager/data/: correct_value.txt
vm_manager/src/: main.cpp  vm_manager.cpp  vm_manager_with_pg_repl.cpp
