[package]
name = "ipc_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.25.0"
log = "0.4.8"
log4rs = "0.10.0"
interprocess = "1.2.0"
anyhow = "1.0.66"
shared_memory = "0.12.4"
crossbeam = "0.8.2"
libc = "0.2.137"